fixes weird shape of face-highlighting on small screen relates to #117

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -326,6 +326,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .feeling-button {
