--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -40,6 +40,7 @@
   --spacing-none: 0;
   --spacing-extra-small: 0.25rem;
   --spacing-small: 0.5rem;
+  --spacing-medium: 1rem;
   --spacing-large: 1.5rem;
   --spacing-extra-large: 2rem;
   --spacing-extra-extra-large: 3rem;
